cartDeployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  ports:
  - name: "cartservice"
    port: 8082
    protocol: TCP
    targetPort: 8080
  selector:
    app: cart-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: cart-app
  template:
    metadata:
      name: cart-pod
      labels:
        app: cart-app
    spec:
      containers:
      - image: bom.ocir.io/yzguo69kabyn/bkhaire/com.ocsc.poc.cart
        name: cart-api
        ports: 
          - containerPort: 8080
      imagePullSecrets:
      - name: ocirsecret
