orderDeployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - name: "orderservice"
    port: 8083
    protocol: TCP
    targetPort: 8080
  selector:
    app: order-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      name: order-pod
      labels:
        app: order-app
    spec:
      containers:
      - image: bom.ocir.io/yzguo69kabyn/bkhaire/com.ocsc.poc.order
        name: order-api
        ports: 
          - containerPort: 8080
      imagePullSecrets:
      - name: ocirsecret
