orderDeployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - name: "orderservice"
    #port accessible inside the cluster..if two pods wants to communicate with each other
    port: 8083
    protocol: TCP
    #port to forward to inside the pod..
    targetPort: 8080
    #port accessible outside the cluster.
    #nodePort: 30001
  selector:
    app: order-app
  #type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      name: order-pod
      labels:
        app: order-app
    spec:
      containers:
      - image: bhushapkhaire/com.ocsc.poc.order
        name: order-api
        ports: 
          - containerPort: 8080
