productDeployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  ports:
  - name: "productservice"
    port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: product-app
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      name: product-pod
      labels:
        app: product-app
    spec:
      containers:
      - image: bom.ocir.io/yzguo69kabyn/bkhaire/com.ocsc.poc.product
        name: product-api
        ports: 
          - containerPort: 8080
      imagePullSecrets:
      - name: ocirsecret
