userDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: "userservice"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: user-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      name: user-pod
      labels:
        app: user-app
    spec:
      containers:
      - image: bom.ocir.io/yzguo69kabyn/bkhaire/com.ocsc.poc.user
        name: user-api
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: ocirsecret
