userDeployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: "userservice"
    #port accessible inside the cluster..if two pods wants to communicate with each other
    port: 8080
    protocol: TCP
    #port to forward to inside the pod..
    targetPort: 8080
    #port accessible outside the cluster.
    #nodePort: 30001
  selector:
    app: user-app
  #type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      name: user-pod
      labels:
        app: user-app
    spec:
      containers:
      - image: bom.ocir.io/yzguo69kabyn/bkhaire/com.ocsc.poc.user
        name: user-api
        ports: 
        - containerPort: 8080
